# merl-env

./: .gitignore  README.md  mimic_diagnosis_dataset_construction.py  mimic_patient_discharge_dataset_construction.py  project_spec.txt  pyproject.toml
examples/: smoke_fixtures.json
scripts/: build_tasks.py  smoke_test_env.py
src/merl_env/: __init__.py
src/merl_env/core/: __init__.py  message.py  registry.py  result.py  sample.py  task.py  tool_call.py
src/merl_env/data/: __init__.py  _builder_utils.py  artifacts.py  bigquery_source.py  diagnosis_builder.py  discharge_builder.py  icd_builder.py  mimic_source.py  splits.py
src/merl_env/environments/: __init__.py  base.py  single_turn.py  tool_enabled.py
src/merl_env/parsers/: __init__.py  final_answer.py  tool_call.py
src/merl_env/prompts/: __init__.py  diagnosis.txt  discharge.txt  icd.txt
src/merl_env/tasks/: __init__.py  base.py  diagnosis.py  discharge.py  icd.py
src/merl_env/tools/: __init__.py  base.py  executor.py  icd_lookup.py  lab_ranges.py  registry.py  web_search.py
src/merl_env/utils/: __init__.py  schema.py
src/merl_env/verifiers/: __init__.py  base.py  diagnosis.py  discharge.py  icd.py
